# scale-breeze

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.api  GEMINI.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_migrations.sh
event-service/: Dockerfile  go.mod  go.sum  main.go  main_test.go
init-db/: 01-init-app-user.sh
migrations/: env.py
migrations/versions/: 326c97dd0e4c_description.py  d951021d009c_create_posts_table.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
tests/: test_main.py
tests/load/: locustfile.py  run_load_test.sh
