[project]
name = "scalebreeze-feed-service"
version = "0.1.0"
description = "FastAPI feed service with asyncpg and Redis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "asyncpg>=0.28.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiokafka>=0.10.0",
    "pyjwt>=2.13.0",
    "cryptography>=48.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0",
]
